Script execution progress

--- a/sample-data/javascript.html
+++ b/sample-data/javascript.html
@@ -1,6 +1,13 @@
 <html>
 	<head>
 		<title>hello</title>
+		<script>
+		window.addEventListener('load', function() {
+			var div = window.document.createElement('div');
+			div.id = 'div11';
+			document.body.appendChild(div);
+		});
+		</script>
 	</head>
 	<body>
 		<div id="box1552">
