Fixed file adapter leaving handles open, causing successive tests on same file to fail.

--- a/sample-data/javascript-args-callee-strict.html
+++ b/sample-data/javascript-args-callee-strict.html
@@ -4,14 +4,13 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-		"use strict";
 		window.addEventListener('DOMContentLoaded', function() {
 			"use strict";
 			if (arguments.callee === null) {
-				console.log('null caller');
+				console.log('null callee');
 			}
 			var div = window.document.createElement('div');
-			div.id = 'div-args-caller-strict';
+			div.id = 'div-args-callee-strict';
 			document.body.appendChild(div);
 			console.log('javascript.html script loaded');
 		});
