--- a/sample-data/javascript-click.html
+++ b/sample-data/javascript-click.html
@@ -3,19 +3,22 @@
 		<title>hello</title>
 	</head>
 	<body>
+		<div id="box1552">
+		content_1552
+		</div>
+
+		<div id="clickbox">
+
+		</div>
 		<script type="text/javascript">
-		"use strict";
 		window.addEventListener('DOMContentLoaded', function() {
-			"use strict";
-			if (arguments.callee === null) {
-				console.log('null caller');
-			}
 			var div = window.document.createElement('div');
-			div.id = 'div-args-caller-strict';
+			div.id = 'div11';
 			document.body.appendChild(div);
 			console.log('javascript.html script loaded');
+			throw new Error('aaaa');
 		});
-
+		console.info('hello, javascript');
 		</script>
 	</body>
 </html>
