--- a/sample-data/anchor-link.html
+++ b/sample-data/anchor-link.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-	<a id='link' href="sample-data/hello.html"></a>
+	<a id='linkRel' href="sample-data/hello.html"></a>
+	<a id='linkAbs' href="https://www.w3schools.com/howto/tryhow_css_contact_section.htm"></a>
 </body>
 
 </html>
