--- a/sample-data/form.html
+++ b/sample-data/form.html
@@ -5,24 +5,35 @@
 </head>
 
 <body>
-	<form action>
+	<form action="sample-data/action.php">
 		<div>
 			<label for="name">Name:</label>
-			<input type="text" id="name" name="user_name">
+			<input type="text" id="nameGET" name="name">
 		</div>
 
 		<div>
 			<label for="mail">E-mail:</label>
-			<input type="email" id="mail" name="user_email">
-		</div>
-
-		<div>
-			<label for="msg">Message:</label>
-			<textarea id="msg" name="user_message"></textarea>
+			<input type="text" id="mailGET" name="mail">
 		</div>
 
 		<div class="button">
-			<button type="submit">Send your message</button>
+			<button id="submitGET" type="submit">Send your message</button>
+		</div>
+	</form>
+
+	<form action="sample-data/action.php" method="POST">
+		<div>
+			<label for="name">Name:</label>
+			<input type="text" id="namePOST" name="name">
+		</div>
+
+		<div>
+			<label for="mail">E-mail:</label>
+			<input type="text" id="mailPOST" name="mail">
+		</div>
+
+		<div class="button">
+			<button id="submitPOST" type="submit">Send your message</button>
 		</div>
 	</form>
 	</div>
