final changes, make html request tests optional

--- a/sample-data/anchor-link.html
+++ b/sample-data/anchor-link.html
@@ -6,7 +6,7 @@
 
 <body>
 	<a id='linkRel' href="sample-data/hello.html"></a>
-	<a id='linkAbs' href="https://www.w3schools.com/howto/tryhow_css_contact_section.htm"></a>
+	<a id='linkAbs' href="https://github.com/armorjs/headless"></a>
 </body>
 
 </html>
